--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>birthday-30</title>
-    <link rel="stylesheet" href="./style.css">
-
-  </head>
-    
-  <body>
-  <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -42,25 +31,13 @@
         <div class="content-box">
             <p class="intro-date">The big day is coming ...</p>
             <div class="timer-container">
-                <div class="time-box">
-                    <span id="d" class="time-num">00</span>
-                    <span class="time-label">Days</span>
-                </div>
+                <div class="time-box"><span id="d" class="time-num">00</span><span class="time-label">Days</span></div>
                 <div class="separator">:</div>
-                <div class="time-box">
-                    <span id="h" class="time-num">00</span>
-                    <span class="time-label">Hours</span>
-                </div>
+                <div class="time-box"><span id="h" class="time-num">00</span><span class="time-label">Hours</span></div>
                 <div class="separator">:</div>
-                <div class="time-box">
-                    <span id="m" class="time-num">00</span>
-                    <span class="time-label">Mins</span>
-                </div>
+                <div class="time-box"><span id="m" class="time-num">00</span><span class="time-label">Mins</span></div>
                 <div class="separator">:</div>
-                <div class="time-box">
-                    <span id="s" class="time-num">00</span>
-                    <span class="time-label">Secs</span>
-                </div>
+                <div class="time-box"><span id="s" class="time-num">00</span><span class="time-label">Secs</span></div>
             </div>
             <p class="subtitle-hero" style="margin-top: 30px; font-size: 1.5rem;">Wait for it ✨</p>
         </div>
@@ -94,7 +71,7 @@
             
             <div class="letter-paper floating-anim">
                 <div class="stamp-photo">
-                    <img src="images/final-photo.jpg" alt="Us">
+                    <img src="final-photo.jpg" alt="Us">
                 </div>
                 <div class="letter-content" id="letter-content"></div>
             </div>
@@ -121,9 +98,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
-    <script  src="./script.js"></script>
-
-  </body>
-  
 </html>
