--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 
-    <audio id="bg-music" loop>
+    <audio id="bg-music" loop autoplay>
         <source src="your-music.mp3" type="audio/mpeg">
     </audio>
     
-    <div class="sound-control" id="sound-btn">
+    <div class="sound-control" id="sound-btn" style="opacity: 1;">
         <span class="sound-icon">♪</span>
     </div>
 
